--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/webPapaya/es6_chat/issues"
+  },
+  "dependencies": {
+    "gulp": "^3.8.11"
   }
 }
