--- a/package.json
+++ b/package.json
@@ -22,7 +22,20 @@
   "bugs": {
     "url": "https://github.com/webPapaya/es6_chat/issues"
   },
+  "devDependencies": {
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.1",
+    "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0",
+    "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-mocha": "^2.1.0",
+    "gulp-open": "^0.3.2",
+    "gulp-uglify": "^1.2.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "dependencies": {
-    "gulp": "^3.8.11"
+    "react": "^0.13.3"
   }
 }
