added first react and flux components

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "flux": "^2.0.3",
+    "object-assign": "^2.0.0",
     "react": "^0.13.3"
   }
 }
