--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "express": "^4.12.4",
     "flux": "^2.0.3",
+    "mongodb": "^2.0.33",
     "object-assign": "^2.0.0",
     "react": "^0.13.3"
   }
