--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "babelify": "^6.1.2",
     "browserify": "^10.2.1",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-mocha": "^2.1.0",
+    "gulp-nodemon": "^2.0.3",
     "gulp-open": "^0.3.2",
     "gulp-uglify": "^1.2.0",
     "vinyl-source-stream": "^1.1.0"
