--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "gulp-mocha": "^2.1.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-open": "^0.3.2",
+    "gulp-plumber": "^1.0.1",
     "gulp-uglify": "^1.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "express": "^4.12.4",
     "flux": "^2.0.3",
+    "formsy-react": "^0.14.1",
     "mongodb": "^2.0.33",
     "object-assign": "^2.0.0",
     "react": "^0.13.3"
