--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.1",
+    "expect.js": "^0.3.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-connect": "^2.2.0",
