--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "flux": "^2.0.3",
     "formsy-react": "^0.14.1",
     "mongodb": "^2.0.33",
+    "mongoose": "^4.0.5",
     "object-assign": "^2.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3"
