--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongodb": "^2.0.33",
     "mongoose": "^4.0.5",
     "object-assign": "^2.0.0",
+    "promise": "^7.0.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3"
   }
