--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "object-assign": "^2.0.0",
     "promise": "^7.0.1",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "socket.io": "^1.3.5"
   }
 }
