--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "color": "^0.8.0",
     "express": "^4.12.4",
     "flux": "^2.0.3",
     "formsy-react": "^0.14.1",
+    "lodash": "^3.9.3",
     "mongodb": "^2.0.33",
     "object-assign": "^2.0.0",
+    "radium": "^0.13.0",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "socket.io": "^1.3.5",
+    "store": "^1.3.17"
   }
 }
