--- a/package.json
+++ b/package.json
@@ -27,17 +27,27 @@
     "browserify": "^10.2.1",
     "expect.js": "^0.3.1",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-connect": "^2.2.0",
+    "gulp-docco": "0.0.4",
+    "gulp-exit": "0.0.2",
+    "gulp-istanbul": "^0.10.0",
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.6",
     "gulp-mocha": "^2.1.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-open": "^0.3.2",
     "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.2.0",
-    "vinyl-source-stream": "^1.1.0"
+    "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.2"
   },
   "dependencies": {
     "color": "^0.8.0",
