--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.2.0",
+    "mock-browser": "^0.90.33",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
