--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-connect": "^2.2.0",
+    "gulp-develop-server": "^0.4.3",
     "gulp-docco": "0.0.4",
     "gulp-exit": "0.0.2",
     "gulp-istanbul": "^0.10.0",
